Oprettet activities and layouts.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,16 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".MenuActivity">
+        </activity>
+        <activity android:name=".TaskListActivity">
+        </activity>
+        <activity android:name=".TaskDetailsActivity">
+        </activity>
+        <activity android:name=".ComponentListActivity">
+        </activity>
+        <activity android:name=".ComponentDetailsActivity">
+        </activity>
     </application>
 
 </manifest>
