--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,40 +12,50 @@
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="com.bprit.app.bprit.LoginActivity">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.bprit.app.bprit.MenuActivity"
-                  android:label="@string/menu_title">
-        </activity>
-        <activity android:name="com.bprit.app.bprit.TaskListActivity"
-                  android:label="@string/tasklist_title">
-        </activity>
-        <activity android:name="com.bprit.app.bprit.TaskDetailsActivity"
-                  android:label="@string/taskdetails_title">
-        </activity>
-        <activity android:name="com.bprit.app.bprit.ComponentListActivity"
-                  android:label="@string/componentlist_title">
-        </activity>
-        <activity android:name="com.bprit.app.bprit.ComponentDetailsActivity"
-                  android:label="@string/componentdetails_title">
-        </activity>
-        <!--Intent filter to capture System Browser calling back to our app after sign-in-->
         <activity
-                android:name="com.microsoft.identity.client.BrowserTabActivity">
+                android:name=".MenuActivity"
+                android:label="@string/menu_title">
+        </activity>
+        <activity
+                android:name=".TaskListActivity"
+                android:label="@string/taskList_title">
+        </activity>
+        <activity
+                android:name=".TaskDetailsActivity"
+                android:label="@string/taskDetails_title">
+        </activity>
+        <activity
+                android:name=".ComponentTypeListActivity"
+                android:label="@string/componentTypeList_title">
+        </activity>
+        <activity
+                android:name=".ComponentListActivity"
+                android:label="@string/componentList_title">
+        </activity>
+        <activity
+                android:name=".ComponentDetailsActivity"
+                android:label="@string/componentDetails_title">
+        </activity>
+        <!-- Intent filter to capture System Browser calling back to our app after sign-in -->
+        <activity android:name="com.microsoft.identity.client.BrowserTabActivity">
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+                <action android:name="android.intent.action.VIEW"/>
 
-                <!--Add in your scheme/host from registered redirect URI-->
-                <!--By default, the scheme should be similar to 'msal[appId]' -->
-                <data android:scheme="msalea3501cb-f257-4d92-96e5-1f534d4343d1"
-                      android:host="auth" />
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+
+                <!-- Add in your scheme/host from registered redirect URI -->
+                <!-- By default, the scheme should be similar to 'msal[appId]' -->
+                <data
+                        android:host="auth"
+                        android:scheme="msalea3501cb-f257-4d92-96e5-1f534d4343d1"/>
             </intent-filter>
         </activity>
     </application>
